Revert "update playbook to work with tower"
This reverts commit afa1d62456ff87185718f312b27db774aa5637bc.

--- a/Ansible/playbooks/data_gather_pb.yml
+++ b/Ansible/playbooks/data_gather_pb.yml
@@ -1,8 +1,14 @@
-tasks:
-  - name: gather facts about IOS devices
-    cisco.ios.ios_facts:
-      gather_subset: all
-    register: result
-  - name: show output to screen
-    debug:
-      var: result
+---
+- name: playbook to gather info about devices
+  hosts: all
+  gather_facts: False
+
+  tasks:
+    - name: gather facts about IOS devices
+      cisco.ios.ios_facts:
+        gather_subset: all
+      register: result
+
+    - name: show output to screen
+      debug:
+        var: result
