--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -1,4 +1,4 @@
 ansible_connection: network_cli
 ansible_network_os: ios
 ansible_user: cisco
-ansible_ssh_pass: cisco
+ansible_ssh_pass: "{{_routerPassword}}"
