--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,4 +1,6 @@
 ---
 collections:
+  - name: ansible.netcommon
   - name: cisco.ios
-  - name: networktocode.nautobot
+  - name: netbox.netbox
+  - name: community.general
